fix text align

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -181,7 +181,8 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
+    color: #000;
+    text-align: center;
     background: #{{ site.color.primary }};
 }
 
